--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DB_USERNAME= 
-DB_PASSWORD= 
-DB_NAME= 
-DB_HOST= 
-DB_PORT= 
+DB_USERNAME= postgres
+DB_PASSWORD= 12345
+DB_NAME= baru
+DB_HOST= 127.0.0.1'
+DB_PORT= 54321
