--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-DB_USERNAME= 
-DB_PASSWORD= 
-DB_NAME= 
-DB_HOST= 
-DB_PORT= 
+DB_USERNAME = 
+DB_PASSWORD = 
+DB_NAME = 
+DB_HOST = 
+DB_PORT = 
+
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET = 
+
+ACCESS_TOKEN_SECRET =
+REFRESH_TOKEN_SECRET =
