--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^3.0.0",
+    "nanoid-dictionary": "^4.3.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "randomstring": "^1.2.3",
     "sequelize": "^6.25.7"
   },
   "devDependencies": {
