--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
+    "moment-random": "^1.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
