--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ CLOUDINARY_API_SECRET =
 
 ACCESS_TOKEN_SECRET =
 REFRESH_TOKEN_SECRET =
+
+GOOGLE_CLIENT_ID =
+GOOGLE_CLIENT_SECRET =
+GOOGLE_REDIRECT_URL =
