feat: mailer (not done)

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,10 @@ REFRESH_TOKEN_SECRET =
 GOOGLE_CLIENT_ID =
 GOOGLE_CLIENT_SECRET =
 GOOGLE_REDIRECT_URL =
+
+
+MAILER_HOST = 'smtp-relay.gmail.com'
+MAILER_PORT = 465
+MAILER_SECURE = true
+MAILER_ACCOUNT = 'flypass.dev@gmail.com'
+MAILER_PASSWORD = 'wdzhcozmofgszpbr'
