--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment-random": "^1.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
