--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.7.0",
