--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./app/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "db:create": "sequelize db:create",
     "db:drop": "sequelize db:drop",
     "db:migrate": "npx sequelize-cli db:migrate",
@@ -31,6 +31,7 @@
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.7.0",
     "googleapis": "^109.0.1",
+    "jest": "^29.3.1",
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
@@ -44,7 +45,8 @@
     "querystring": "^0.2.1",
     "randomstring": "^1.2.3",
     "sequelize": "^6.25.7",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
