fix: booking handler

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DB_USERNAME = 
-DB_PASSWORD = 
-DB_NAME = 
-DB_HOST = 
-DB_PORT = 
+DB_USERNAME = postgre
+DB_PASSWORD = admin
+DB_NAME = flypass
+DB_HOST = 127.0.0.1
+DB_PORT = 5432
 
 CLOUDINARY_CLOUD_NAME = 
 CLOUDINARY_API_KEY = 
