--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "ignorePatterns": ["**/migrations", "**/models", "**/seeders", "**/app/__test__"],
   "rules": {
     "linebreak-style": 0,
-    "semi" : "off"
+    "semi" : "off",
+    "quotes" : "off"
   }
 }
